--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "ant-design-vue": "^2.0.0-rc.2",
+    "ant-design-vue": "^2.0.0-rc.4",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "md5": "^2.3.0",
     "mitt": "^2.1.0",
-    "vue": "^3.0.2",
-    "vue-router": "^4.0.0-rc.5",
-    "vuex": "^4.0.0-rc.1"
+    "vue": "^3.0.4",
+    "vue-router": "^4.0.1",
+    "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
