--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dll": "webpack --progress --config ./webpack.dll.conf.js"
   },
   "dependencies": {
     "ant-design-vue": "^2.0.0-rc.6",
@@ -30,8 +31,13 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/test-utils": "^2.0.0-0",
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.3",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "chai": "^4.1.2",
+    "chalk": "^4.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^6.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
@@ -39,9 +45,11 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0-0",
+    "progress-bar-webpack-plugin": "^2.1.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "script-ext-html-webpack-plugin": "2.1.5",
     "webpack-bundle-analyzer": "^4.1.0",
-    "script-ext-html-webpack-plugin": "2.1.5"
+    "webpack-cli": "^4.3.1"
   }
 }
