--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
     "vuex": "^4.0.0-rc.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-e2e-cypress": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-unit-mocha": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-standard": "^5.1.2",
+    "@babel/core": "^7.12.10",
+    "@babel/eslint-parser": "^7.12.1",
+    "@vue/cli-plugin-babel": "~5.0.0-alpha.3",
+    "@vue/cli-plugin-e2e-cypress": "~5.0.0-alpha.3",
+    "@vue/cli-plugin-eslint": "~5.0.0-alpha.3",
+    "@vue/cli-plugin-router": "~5.0.0-alpha.3",
+    "@vue/cli-plugin-unit-mocha": "~5.0.0-alpha.3",
+    "@vue/cli-plugin-vuex": "~5.0.0-alpha.3",
+    "@vue/cli-service": "~5.0.0-alpha.3",
+    "@vue/compiler-sfc": "^3.0.4",
+    "@vue/eslint-config-standard": "^6.0.0",
     "@vue/test-utils": "^2.0.0-0",
     "add-asset-html-webpack-plugin": "^3.1.3",
     "babel-eslint": "^10.1.0",
@@ -39,17 +41,18 @@
     "chalk": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^6.1.1",
-    "eslint": "^6.7.2",
+    "eslint": "^7.15.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^7.0.0-0",
+    "eslint-plugin-vue": "^7.2.0",
     "progress-bar-webpack-plugin": "^2.1.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "script-ext-html-webpack-plugin": "2.1.5",
-    "webpack-bundle-analyzer": "^4.1.0",
-    "webpack-cli": "^4.3.1"
+    "webpack-bundle-analyzer": "^4.4.0",
+    "webpack-cli": "^4.4.0",
+    "postcss-loader": "^4.2.0",
+    "postcss": "^8.1"
   }
 }
