--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "dll": "webpack --progress --config ./webpack.dll.conf.js"
   },
   "dependencies": {
-    "ant-design-vue": "^2.0.0-rc.6",
+    "ant-design-vue": "^2.0.0-rc.9",
     "axios": "^0.21.1",
+    "better-scroll": "^2.2.0",
     "core-js": "^3.6.5",
     "md5": "^2.3.0",
     "mitt": "^2.1.0",
     "vue": "^3.0.5",
-    "vue-router": "^4.0.2",
-    "vuex": "^4.0.0-rc.2"
+    "vue-router": "^4.0.3",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
