--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/eslint-parser": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.13.9",
     "@vue/cli-plugin-babel": "~5.0.0-alpha.3",
     "@vue/cli-plugin-e2e-cypress": "~5.0.0-alpha.3",
     "@vue/cli-plugin-eslint": "~5.0.0-alpha.3",
@@ -38,6 +39,7 @@
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
     "chai": "^4.1.2",
     "chalk": "^4.1.0",
     "clean-webpack-plugin": "^3.0.0",
