--- a/package.json
+++ b/package.json
@@ -7,32 +7,32 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint",
-    "dll": "webpack --progress --config ./webpack.dll.conf.js"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "ant-design-vue": "^2.0.0",
+    "ant-design-vue": "^2.1.0",
     "axios": "^0.21.1",
     "better-scroll": "^2.2.0",
     "core-js": "^3.6.5",
     "md5": "^2.3.0",
     "mitt": "^2.1.0",
-    "vue": "^3.0.5",
-    "vue-router": "^4.0.3",
+    "vue": "^3.0.9",
+    "vue-router": "^4.0.5",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/eslint-parser": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.13.9",
-    "@vue/cli-plugin-babel": "~5.0.0-alpha.3",
-    "@vue/cli-plugin-e2e-cypress": "~5.0.0-alpha.3",
-    "@vue/cli-plugin-eslint": "~5.0.0-alpha.3",
-    "@vue/cli-plugin-router": "~5.0.0-alpha.3",
-    "@vue/cli-plugin-unit-mocha": "~5.0.0-alpha.3",
-    "@vue/cli-plugin-vuex": "~5.0.0-alpha.3",
-    "@vue/cli-service": "~5.0.0-alpha.3",
-    "@vue/compiler-sfc": "^3.0.4",
+    "@babel/core": "^7.13.13",
+    "@babel/eslint-parser": "^7.13.0",
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@vue/cli-plugin-babel": "~5.0.0-alpha.8",
+    "@vue/cli-plugin-e2e-cypress": "~5.0.0-alpha.8",
+    "@vue/cli-plugin-eslint": "~5.0.0-alpha.8",
+    "@vue/cli-plugin-router": "~5.0.0-alpha.8",
+    "@vue/cli-plugin-unit-mocha": "~5.0.0-alpha.8",
+    "@vue/cli-plugin-vuex": "~5.0.0-alpha.8",
+    "@vue/cli-service": "~5.0.0-alpha.8",
+    "@vue/compiler-sfc": "^3.0.9",
     "@vue/eslint-config-standard": "^6.0.0",
     "@vue/test-utils": "^2.0.0-0",
     "add-asset-html-webpack-plugin": "^3.1.3",
@@ -49,12 +49,13 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-vue": "^7.2.0",
+    "hard-source-webpack-plugin": "0.13.1",
     "progress-bar-webpack-plugin": "^2.1.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "script-ext-html-webpack-plugin": "2.1.5",
     "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-cli": "^4.4.0",
+    "webpack-cli": "^4.6.0",
     "postcss-loader": "^4.2.0",
     "postcss": "^8.1"
   }
