--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@sentry/browser": "^6.3.1",
+    "@sentry/tracing": "^6.3.1",
     "ant-design-vue": "^2.1.2",
     "axios": "^0.21.1",
     "better-scroll": "^2.3.0",
