--- a/package.json
+++ b/package.json
@@ -12,28 +12,28 @@
   "dependencies": {
     "@sentry/browser": "^6.3.1",
     "@sentry/tracing": "^6.3.1",
-    "ant-design-vue": "^2.1.2",
-    "axios": "^0.21.1",
+    "ant-design-vue": "^2.2.8",
+    "axios": "^0.21.4",
     "better-scroll": "^2.3.0",
     "core-js": "^3.6.5",
     "md5": "^2.3.0",
     "mitt": "^2.1.0",
-    "vue": "^3.0.11",
-    "vue-router": "^4.0.6",
-    "vuex": "^4.0.0"
+    "vue": "^3.2.19",
+    "vue-router": "^4.0.11",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.13",
     "@babel/eslint-parser": "^7.13.0",
     "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@vue/cli-plugin-babel": "~5.0.0-alpha.8",
-    "@vue/cli-plugin-e2e-cypress": "~5.0.0-alpha.8",
-    "@vue/cli-plugin-eslint": "~5.0.0-alpha.8",
-    "@vue/cli-plugin-router": "~5.0.0-alpha.8",
-    "@vue/cli-plugin-unit-mocha": "~5.0.0-alpha.8",
-    "@vue/cli-plugin-vuex": "~5.0.0-alpha.8",
-    "@vue/cli-service": "~5.0.0-alpha.8",
+    "@vue/cli-plugin-babel": "~5.0.0-beta.4",
+    "@vue/cli-plugin-e2e-cypress": "~5.0.0-beta.4",
+    "@vue/cli-plugin-eslint": "~5.0.0-beta.4",
+    "@vue/cli-plugin-router": "~5.0.0-beta.4",
+    "@vue/cli-plugin-unit-mocha": "~5.0.0-beta.4",
+    "@vue/cli-plugin-vuex": "~5.0.0-beta.4",
+    "@vue/cli-service": "~5.0.0-beta.4",
     "@vue/compiler-sfc": "^3.0.9",
     "@vue/eslint-config-standard": "^6.0.0",
     "@vue/test-utils": "^2.0.0-0",
